--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
     <meta charset="utf-8" />
-    <title>Darron's Portfolio</title>
+    <title>Darron's Challenging Homework1</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
 </head>
-<body>
 
-<!-- Navigation bar -->
-    <div class="nav">
-        <a class="me about_me" href="#">Darron Biles</a>
-        <div class="top-nav-right">
-            <a href="index.html">About <a href="portfolio.html">Portfolio </a> <a href="contact.html">Contact</a>
+    <!-- Header Navigation-->
+    <header class="topheader">
+        <div class="navi">
+            <div class="name"><a href="./index.html">Darron Biles</a></div>
+            <nav>
+                <a href="./index.html">About Me</a> |
+                <a href="./portfolio.html">Portfolio</a> |
+                <a href="./contact.html">Contact</a>
+            </nav>
         </div>
-    </div>
+    </header>
 
-    <!-- About Me page -->
-    <div class="container">
-        <header>About Me</header>
-        <hr>
-        <img src="http://via.placeholder.com/200x200" alt="picture of Darron" class="about_me_image">
-        <p>Nerdy, geeky, young African American male that is always looking to defy stereotypes, give back to surrounding communities, and understands the importance of self reflection.</p>
-        <p>I enjoy talks and discussion about new tech whether it is in the , Electric and autonomous vehicles, the blockchain space, what javascript framework is "IN" these days, or the common 'AI' is taking all the jobs.</p>
-        <p>I have worked primarily in the auto and finance/payment industry. I am constantly working on small ideas that I hope to build out and make a career of as well one day.</p>
-    </div>
-</body>
+    <body>
+        <div class="background">
+            <div class="page-content">
+                <header>About Me</header>
+                <img src="./assets/images/IMG_0671.JPG" alt="picture of me">
+                <p>This is random text of me that will go beside the image and will ultimately become a paragraph of the stuff about me as well so I am just going to keep typing until this text starts to wrap</p>
+                <p>Here is some more stuff that will contain information about me as it pertains to the basic portfolio. I will continue to input more information</p>
+                <p>This is the last bit of the paragraph about me and I doubt there is even much to say at this point but oh well I guess I will just continue to type</p>
+            </div>
+        </div>
+    </body>
+    <footer>copyright @</footer>
 </html>
